--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  width: 1110px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 
@@ -26,7 +26,7 @@
   flex-direction: column;
   justify-content: space-between;
   background-image: url(../img/Header_bg.png);
-  width: 1770px;
+  max-width: 1770px;
   height: 820px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -69,11 +69,18 @@
   background-color: #ffffff;
 }
 
+* body .background .Search input:focus {
+  outline: none;
+  text-align: center;
+  font-family: "Josefin Sans", Arial, sans-serif;
+  font-size: 14px;
+  letter-spacing: 2.8px;
+}
+
 * body .background .Search ::placeholder {
   font-family: "Josefin Sans", Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
-  font-style: normal;
   line-height: 1.86;
   letter-spacing: 2.8px;
   text-align: center;
@@ -103,18 +110,18 @@
   margin-left: 15px;
 }
 
-* body .background .scroll {
+* body .background .scroll a {
   font-family: "Josefin Sans", Arial, sans-serif;
   font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
+  font-weight: 300;
   line-height: 1.86;
   letter-spacing: 2.8px;
   color: #fff;
+  text-decoration: none;
 }
 
 * body .background .menu {
-  width: 1770px;
+  max-width: 1770px;
   height: 80px;
   background-color: #5474fd;
 }
@@ -139,6 +146,7 @@
 }
 
 * body .background .menu .container .menu-items .item a {
+  text-decoration: none;
   font-family: "Aleo", serif;
   font-size: 14px;
   font-weight: normal;
@@ -154,7 +162,7 @@
 * body main .Why_choose_us {
   background-image: url(../img/why_choose_us_bg.png);
   background-size: cover;
-  width: 1770px;
+  max-width: 1770px;
   height: 685px;
 }
 
@@ -219,7 +227,7 @@
 }
 
 * body main .infografic {
-  width: 1770px;
+  max-width: 1770px;
   height: 337px;
   background-color: #333333;
 }
@@ -273,15 +281,14 @@
 * body main .book_now1 {
   background-image: url(../img/book_now_1.png);
   background-size: cover;
-  width: 1770px;
+  max-width: 1770px;
   height: 700px;
 }
 
 * body main .book_now1 .offer {
   width: 540px;
   height: 371px;
-  opacity: 0.9;
-  background-color: #232323;
+  background-color: rgba(35, 35, 35, 0.9);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -290,8 +297,7 @@
   color: #e8e8e8;
   text-align: left;
   position: relative;
-  left: 330px;
-  top: 30%;
+  top: 230px;
   padding-left: 30px;
 }
 
@@ -330,21 +336,24 @@
   letter-spacing: 1.2px;
   text-align: center;
   color: #fff;
-  opacity: 1;
 }
 
 * body main .book_now2 {
   background-image: url(../img/book_now_2.png);
   background-size: cover;
-  width: 1770px;
+  max-width: 1770px;
   height: 700px;
 }
 
-* body main .book_now2 .offer {
+* body main .book_now2 .container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+* body main .book_now2 .container .offer {
   width: 540px;
   height: 371px;
-  opacity: 0.9;
-  background-color: #232323;
+  background-color: rgba(35, 35, 35, 0.9);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -353,25 +362,24 @@
   color: #e8e8e8;
   text-align: left;
   position: relative;
-  left: 900px;
-  top: 30%;
+  top: 230px;
   padding-left: 30px;
 }
 
-* body main .book_now2 .offer .country {
+* body main .book_now2 .container .offer .country {
   font-size: 20px;
   line-height: 1.3;
   letter-spacing: 1.5px;
 }
 
-* body main .book_now2 .offer h2 {
+* body main .book_now2 .container .offer h2 {
   font-size: 20px;
   font-weight: normal;
   letter-spacing: normal;
   line-height: 1.3;
 }
 
-* body main .book_now2 .offer .description {
+* body main .book_now2 .container .offer .description {
   font-size: 16px;
   font-weight: normal;
   font-style: normal;
@@ -379,7 +387,7 @@
   letter-spacing: normal;
 }
 
-* body main .book_now2 .offer button {
+* body main .book_now2 .container .offer button {
   width: 225px;
   height: 60px;
   background-color: #5474fd;
@@ -394,4 +402,121 @@
   text-align: center;
   color: #fff;
   opacity: 1;
+}
+
+* body main .comments {
+  background-image: url(../img/testimonials_bg.png);
+  background-size: cover;
+  max-width: 1770px;
+  height: 731px;
+  color: #fff;
+}
+
+* body main .comments .container {
+  height: 731px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+* body main .comments .container h1 {
+  font-family: "Aleo", serif;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 0.72;
+  letter-spacing: normal;
+  text-align: center;
+  margin-top: 120px;
+}
+
+* body main .comments .container .comment {
+  display: flex;
+}
+
+* body main .comments .container .comment .text {
+  width: 665px;
+  height: 284px;
+  background-color: #333333;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 60px;
+  font-family: "Josefin Sans", Arial, sans-serif;
+}
+
+* body main .comments .container .comment .text .name {
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1.3;
+  text-align: left;
+  text-decoration: uppercase;
+}
+
+* body main .comments .container .comment .text .massege {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.63;
+  padding-right: 54px;
+}
+
+* body main .comments .container .comment .text .massege i {
+  position: relative;
+  bottom: 16px;
+  color: #5474fd;
+}
+
+* body main .comments .container .comment-nav {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 120px;
+}
+
+* body main .comments .container .comment-nav .arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 50px;
+  border: solid 1px #ffffff;
+  margin-left: 15px;
+}
+
+* body footer {
+  text-align: center;
+  color: #fff;
+  font-family: "Josefin Sans", Arial, sans-serif;
+  max-width: 1770px;
+  height: 268px;
+  background-color: #232323;
+}
+
+* body footer .logo {
+  padding-top: 120px;
+  padding-bottom: 30px;
+}
+
+* body footer .logo p:first-child {
+  height: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.08;
+  letter-spacing: 3.4px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+* body footer .logo p:last-child {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.63;
+  letter-spacing: 1.6px;
+}
+
+* body footer .social span {
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+* body footer .social span:hover {
+  color: #5474fd;
 }
