--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 .container {
-  width: 1110px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 * {
@@ -23,7 +23,7 @@
       flex-direction: column;
       justify-content: space-between;
       background-image: url(../img/Header_bg.png);
-      width: 1770px;
+      max-width: 1770px;
       height: 820px;
       background-size: cover;
       background-repeat: no-repeat;
@@ -62,12 +62,18 @@
           border: none;
           background-color: #ffffff;
         }
+        input:focus {
+          outline: none;
+          text-align: center;
+          font-family: "Josefin Sans", Arial, sans-serif;
+          font-size: 14px;
+          letter-spacing: 2.8px;
+        }
 
         ::placeholder {
           font-family: "Josefin Sans", Arial, sans-serif;
           font-size: 14px;
           font-weight: normal;
-          font-style: normal;
           line-height: 1.86;
           letter-spacing: 2.8px;
           text-align: center;
@@ -97,17 +103,19 @@
           }
         }
       }
-      .scroll {
+      .scroll{ 
+        a {
         font-family: "Josefin Sans", Arial, sans-serif;
         font-size: 14px;
-        font-weight: normal;
-        font-style: normal;
+        font-weight: 300;
         line-height: 1.86;
         letter-spacing: 2.8px;
         color: #fff;
+        text-decoration: none;
+        }
       }
       .menu {
-        width: 1770px;
+        max-width: 1770px;
         height: 80px;
         background-color: #5474fd;
         .container {
@@ -129,6 +137,7 @@
           .menu-items {
             .item {
               a {
+                text-decoration: none;
                 font-family: "Aleo", serif;
                 font-size: 14px;
                 font-weight: normal;
@@ -149,7 +158,7 @@
       .Why_choose_us {
         background-image: url(../img/why_choose_us_bg.png);
         background-size: cover;
-        width: 1770px;
+        max-width: 1770px;
         height: 685px;
 
         .container {
@@ -211,7 +220,7 @@
         }
       }
       .infografic {
-        width: 1770px;
+        max-width: 1770px;
         height: 337px;
         background-color: #333333;
 
@@ -262,14 +271,13 @@
       .book_now1 {
         background-image: url(../img/book_now_1.png);
         background-size: cover;
-        width: 1770px;
+        max-width: 1770px;
         height: 700px;
 
         .offer {
           width: 540px;
           height: 371px;
-          opacity: 0.9;
-          background-color: #232323;
+          background-color: rgba(35, 35, 35, 0.9);
           display: flex;
           flex-direction: column;
           justify-content: space-around;
@@ -278,8 +286,7 @@
           color: #e8e8e8;
           text-align: left;
           position: relative;
-          left: 330px;
-          top: 30%;
+          top: 230px;
           padding-left: 30px;
 
           .country {
@@ -314,67 +321,178 @@
             letter-spacing: 1.2px;
             text-align: center;
             color: #fff;
-            opacity: 1;
           }
         }
       }
       .book_now2 {
         background-image: url(../img/book_now_2.png);
         background-size: cover;
-        width: 1770px;
+        max-width: 1770px;
         height: 700px;
 
-        .offer {
-          width: 540px;
-          height: 371px;
-          opacity: 0.9;
-          background-color: #232323;
+        .container {
+          display: flex;
+          justify-content: flex-end;
+          .offer {
+            width: 540px;
+            height: 371px;
+            background-color: rgba(35, 35, 35, 0.9);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            font-family: "Josefin Sans", Arial, sans-serif;
+            font-weight: normal;
+            color: #e8e8e8;
+            text-align: left;
+            position: relative;
+            top: 230px;
+            padding-left: 30px;
+
+            .country {
+              font-size: 20px;
+              line-height: 1.3;
+              letter-spacing: 1.5px;
+            }
+            h2 {
+              font-size: 20px;
+              font-weight: normal;
+              letter-spacing: normal;
+              line-height: 1.3;
+            }
+            .description {
+              font-size: 16px;
+              font-weight: normal;
+              font-style: normal;
+              line-height: 1.63;
+              letter-spacing: normal;
+            }
+            button {
+              width: 225px;
+              height: 60px;
+              background-color: #5474fd;
+              border: none;
+              font-family: "Aleo", serif;
+              font-size: 16px;
+              font-weight: normal;
+              font-style: normal;
+              text-transform: uppercase;
+              line-height: 1.63;
+              letter-spacing: 1.2px;
+              text-align: center;
+              color: #fff;
+              opacity: 1;
+            }
+          }
+        }
+      }
+      .comments {
+        background-image: url(../img/testimonials_bg.png);
+        background-size: cover;
+        max-width: 1770px;
+        height: 731px;
+        color: #fff;
+        .container {
+          height: 731px;
           display: flex;
           flex-direction: column;
-          justify-content: space-around;
-          font-family: "Josefin Sans", Arial, sans-serif;
-          font-weight: normal;
-          color: #e8e8e8;
-          text-align: left;
-          position: relative;
-          left: 900px;
-          top: 30%;
-          padding-left: 30px;
+          justify-content: space-between;
 
-          .country {
-            font-size: 20px;
-            line-height: 1.3;
-            letter-spacing: 1.5px;
-          }
-          h2 {
-            font-size: 20px;
-            font-weight: normal;
-            letter-spacing: normal;
-            line-height: 1.3;
-          }
-          .description {
-            font-size: 16px;
-            font-weight: normal;
-            font-style: normal;
-            line-height: 1.63;
-            letter-spacing: normal;
-          }
-          button {
-            width: 225px;
-            height: 60px;
-            background-color: #5474fd;
-            border: none;
+          h1 {
             font-family: "Aleo", serif;
-            font-size: 16px;
+            font-size: 36px;
             font-weight: normal;
-            font-style: normal;
-            text-transform: uppercase;
-            line-height: 1.63;
-            letter-spacing: 1.2px;
+            line-height: 0.72;
+            letter-spacing: normal;
             text-align: center;
-            color: #fff;
-            opacity: 1;
+            margin-top: 120px;
           }
+          .comment {
+            display: flex;
+
+            .text {
+              width: 665px;
+              height: 284px;
+              background-color: #333333;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-around;
+              padding-left: 60px;
+              font-family: "Josefin Sans", Arial, sans-serif;
+
+              .name {
+                font-size: 20px;
+                font-weight: 300;
+                line-height: 1.3;
+                text-align: left;
+                text-decoration: uppercase;
+              }
+
+              .massege {
+                font-size: 16px;
+                font-weight: 300;
+                line-height: 1.63;
+                padding-right: 54px;
+
+                i {
+                  position: relative;
+                  bottom: 16px;
+                  color: #5474fd;
+                }
+              }
+            }
+          }
+          .comment-nav {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 120px;
+
+            .arrow {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              width: 80px;
+              height: 50px;
+              border: solid 1px #ffffff;
+              margin-left: 15px;
+            }
+          }
+        }
+      }
+    }
+    footer {
+      text-align: center;
+      color: #fff;
+      font-family: "Josefin Sans", Arial, sans-serif;
+      max-width: 1770px;
+      height: 268px;
+      background-color: #232323;
+      .logo {
+        padding-top: 120px;
+        padding-bottom: 30px;
+        p:first-child {
+          height: 20px;
+          font-size: 24px;
+          font-weight: bold;
+          line-height: 1.08;
+          letter-spacing: 3.4px;
+          text-transform: uppercase;
+          margin-bottom: 15px;
+        }
+        p:last-child {
+          font-size: 16px;
+          font-weight: 300;
+          line-height: 1.63;
+          letter-spacing: 1.6px;
+        }
+      }
+      .social {
+        span {
+          margin-left: 12px;
+          margin-right: 12px;
+        }
+
+        span:hover {
+          color: #5474fd;
         }
       }
     }
